# chessbot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  ai.py  dev  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: docker-build.yml
chessbot/: bot.py  log.py
